--- a/README
+++ b/README
@@ -4,5 +4,6 @@ Building
 
 To build this program, simply run build.cmd. You can run clean.cmd to
 delete generated files.
-Note that it uses my SCC compiler to build this program. You can view source
-files of SCC at https://github.com/XXXXXXXXsegfault/scc_64.
+Note that this program uses my SCC compiler to build this program.
+You can view source files of SCC at
+https://github.com/XXXXXXXXsegfault/scc_64.
